@@ -1,9 +1,9 @@
 [comment {-*- tcl -*- doctools manpage}]
-[manpage_begin fileutil n 1.10]
+[manpage_begin fileutil n 1.11]
 [moddesc   {file utilities}]
 [titledesc {Procedures implementing some file utilities}]
 [require Tcl 8]
-[require fileutil [opt 1.10]]
+[require fileutil [opt 1.11]]
 [description]
 [keywords {file utilities} touch grep type {temp file} test cat]
 [para]
